# image-viewer-rs

./: .gitignore  Cargo.toml  LICENSE
src/: error.rs  img.rs  main.rs  root.rs
src/img/: bmp.rs  ico.rs  jxl.rs  psd.rs  qoi.rs  xpm.rs
